Menu fixed spacing

--- a/react-front-end/src/stylesheets/nav.css
+++ b/react-front-end/src/stylesheets/nav.css
@@ -27,12 +27,14 @@ nav {
 }
 
 .nav-left {
+  display: flex;
   justify-self: flex-start;
+  justify-content: space-between;
   padding: 0 20px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  font-family: 'Qwigley', cursive;
+  
 }
 
 .nav-right {
@@ -52,12 +54,14 @@ nav {
 	font-family: 'Source Sans Pro', sans-serif;
   border: none;
   cursor: pointer;
+  font-weight: bold;
+  margin-left: 15px;
+
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
-  left: -510px;
   
 }
 
